workspace = { members = ["macros"] }
[package]
name = "driverstation"
version = "0.1.0"
edition = "2021"

[dependencies]
macros = { path = "./macros" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["net", "rt", "macros", "io-util", "sync", "rt-multi-thread"] }

[features]
sync = []
